kubernetes/argocd/apps/workloads/paulynomial-index/manifests/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: paulynomial-index
  namespace: paulynomial-index
spec:
  selector:
    app: paulynomial-index
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
